--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body{
     color: #b041b0;
     background-color: white;
     border: 2px solid black;
+    cursor: pointer;
     
 }
 #reset{
@@ -43,6 +44,7 @@ body{
     color: white;
     border-radius: 1rem;
     border: none;
+    cursor: pointer;
 }
 #winner{
     font-size: 5vmin;
@@ -56,6 +58,8 @@ body{
     color: white;
     border-radius: 1rem;
     border: none;
+    cursor: pointer;
+    
 }
 .hide{
     display: none;
